# solar-smart-lamp

./: .gitignore  README.md
desktop-app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
firmware/: Makefile  main.cpp
firmware/Bluetooth/: uart.cpp  uart.h
firmware/Delay/: Delay.cpp  Delay.h
firmware/LEDDriver/: LEDDriver.cpp  LEDDriver.h  driver_ws2812b.c  driver_ws2812b.h  ws2812b_port.c
firmware/LightDriver/: LightDriver.cpp  LightDriver.h
firmware/MotionDriver/: MotionDriver.cpp  MotionDriver.h
firmware/System/: System.cpp  System.h
